--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
+        <ul>
+            <li><a href="./recipes/cookies.html">Cookies</a></li>
+            <li><a href="./recipes/crepes.html">Crepes</a></li>
+            <li><a href="./recipes/lemon_bluebery_cupcakes.html">Lemon Blueberry Cupcakes</a></li>
+        </ul>
     </body>
 </html>
