--- a/recipes/lemon_blueberry_cupcakes.html
+++ b/recipes/lemon_blueberry_cupcakes.html
@@ -7,5 +7,51 @@
 
     <body>
         <h1>Lemon Blueberry Cupcakes</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F-0001%2F11%2F30%2F1645318150DSC_1989203-2000.jpg&w=550&h=550&c=sc&poi=face&q=60">
+        <p>Zesty and bright, these cupcakes are sure to wow! A vibrant frosting (flavored with a quick homemade jam) sits atop a lemony, moist cupcake studded with colorful berries. Using frozen blueberries makes these cupcakes accessible any time of year, too!</p>
+        <h2>Ingredients:</h2>
+        <h3>Bluebery Jam:</h3>
+        <ul>
+            <li>1 1/2 cups frozen blueberries</li>
+            <li>2 tablespoons white sugar</li>
+            <li>1 teaspoon lemon juice</li>
+        </ul>
+        <h3>Cupcakes:</h3>
+        <ul>
+            <li>1 3/4 cups all-purpose flour</li>
+            <li>2 teaspoons baking powder</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1 cup white sugar</li>
+            <li>1/2 cup unsalted butter, softened</li>
+            <li>2 large eggs, at room temperature</li>
+            <li>3 tablespoons lemon juice</li>
+            <li>1 1/2 tablespoons lemon zest</li>
+            <li>1/2 teaspoon vanilla extract</li>
+            <li>2/3 cup buttermilk, at room temperature</li>
+            <li>1 1/2 cups frozen blueberries</li>
+            <li>1 tablespoon all-purpose flour</li>
+        </ul>
+        <h3>Frosting:</h3>
+        <ul>
+            <li>1 cup unsalted butter, softened</li>
+            <li>2 teaspoons lemon zest</li>
+            <li>1 1/2 teaspoons lemon juice</li>
+            <li>1/8 teaspoon salt</li>
+            <li>3 1/2 cups powdered sugar</li>
+            <li>1 tablespoon heavy cream</li>
+        </ul>
+        <h3>Directions:</h3>
+        <ol>
+            <li>Combine frozen blueberries, sugar, and lemon juice for jam in a small pot over medium heat; bring to a simmer. Cook, stirring occasionally, until mixture has reduced and thickened, about 12 minutes. Remove from the heat.</li>
+            <li>Pour mixture through a fine mesh sieve, pressing solids to extract as much jam as possible; you should have approximately 1/4 cup. Discard any solids and refrigerate jam until completely cool, at least 30 minutes. </li>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Line 18 muffin cups with paper liners.</li>
+            <li>Whisk flour, baking powder, and salt for cupcakes together in a small bowl.</li>
+            <li>Cream sugar and butter together in a large bowl until light and fluffy. Mix in lemon juice, lemon zest, and vanilla until combined. Add flour mixture in 2 batches, alternating with buttermilk, beating batter just until combined after each addition; batter will be somewhat thick.</li>
+            <li>Place frozen blueberries in a small bowl and toss with flour until coated. Add to the batter and fold to incorporate. Spoon batter into the prepared muffin cups, filling each one 3/4 full.</li>
+            <li>Bake in the preheated oven for 20 minutes. Check to see if a toothpick inserted into the centers comes out clean, and continue to bake, if needed, for 4 to 8 more minutes. Cool in the pans for 5 minutes before removing to a wire rack to cool completely, about 20 minutes more.</li>
+            <li>While the cupcakes are cooling, remove blueberry jam from the refrigerator. Measure out 1/4 cup for the frosting and reserve any extra for another use.</li>
+            <li>Beat butter for frosting in a large bowl until creamy and smooth. Add 1 cup powdered sugar, lemon zest, lemon juice, and salt; beat until thoroughly combined. Add 1/4 cup blueberry jam and mix until combined. Add 1 cup powdered sugar and mix until smooth. Repeat with remaining 1 1/2 cups powdered sugar. Add heavy cream and beat until frosting is smooth and fluffy, 1 to 2 minutes more.</li>
+            <li>Frost cooled cupcakes.</li>
+        </ol>
     </body>
 </html>
